syntax = "proto3";

package management;

import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "inventorypb/agents.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "api/managementpb;managementpb";

message GenericAgent {
  // Unique randomly generated instance identifier.
  string agent_id = 1;
  // Agent type.
  string agent_type = 2;
  // The pmm-agent identifier which runs this instance.
  string pmm_agent_id = 3;
  // Node identifier.
  string node_id = 4;
  // Node identifier where this instance runs.
  string runs_on_node_id = 5;
  // Service identifier.
  string service_id = 6;
  // Desired Agent status: enabled (false) or disabled (true).
  bool disabled = 7;
  // Actual Agent status.
  string status = 8;
  // Agent version.
  string version = 9;
  // HTTP basic auth username for collecting metrics.
  string username = 10;
  // Scheme to generate URI to exporter metrics endpoints.
  string scheme = 11;
  // Path under which metrics are exposed, used to generate URI.
  string metrics_path = 12;
  // Custom user-assigned labels.
  map<string, string> custom_labels = 13;
  // List of disabled collector names.
  repeated string disabled_collectors = 14;
  // List of colletions to get stats from. Can use *
  repeated string stats_collections = 15;
  // Collections limit. Only get Databases and collection stats if the total number of collections in the server
  // is less than this value. 0: no limit
  int32 collections_limit = 16;
  // Enable All collectors.
  bool enable_all_collectors = 17;
  // True if Agent is running and connected to pmm-managed.
  bool is_connected = 18;
  // Path to exec process.
  string process_exec_path = 19;
  // Listen port for scraping metrics.
  uint32 listen_port = 20;
  // Log level for exporter.
  string log_level = 21;
  // Basic metrics are disabled.
  bool basic_metrics_disabled = 22;
  // Enhanced metrics are disabled.
  bool enhanced_metrics_disabled = 23;
  // True if exporter uses push metrics mode.
  bool push_metrics_enabled = 24;
  // True if query examples are disabled.
  bool query_examples_disabled = 25;
  // AWS Access Key.
  string aws_access_key = 26;
  // Use TLS for database connections.
  bool tls = 27;
  // Skip TLS certificate and hostname validation.
  bool tls_skip_verify = 28;
  // Certificate Authority certificate chain.
  string tls_ca = 29;
  // Client certificate.
  string tls_cert = 30;
  // Password for decrypting tls_cert.
  string tls_key = 31;
  // Limit query length in QAN (default: server-defined; -1: no limit).
  int32 max_query_length = 32;
  // Tablestats group collectors are disabled if there are more than that number of tables.
  // 0 means tablestats group collectors are always enabled (no limit).
  // Negative value means tablestats group collectors are always disabled.
  int32 tablestats_group_table_limit = 33;
}

// ListAgentRequest is identical to inventory.ListServicesRequest.
// It is duplicated here to allow further modifications without touching on the low-level Inventory API.
message ListAgentRequest {
  // Return only Agents that provide insights for that Service.
  // Exactly one of these parameters should be present: pmm_agent_id, node_id, service_id.
  string service_id = 1;
}

message ListAgentResponse {
  // List of Services.
  repeated GenericAgent agents = 1;
}

// Agent service provides public methods for managing and querying Agents.
service Agent {
  // ListAgents returns a list of Agents filtered by type.
  rpc ListAgents(ListAgentRequest) returns (ListAgentResponse) {
    option (google.api.http) = {
      post: "/v1/management/Agent/List"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List Agents"
      description: "Returns a filtered list of Agents."
    };
  }
}
